--- a/gradle.properties
+++ b/gradle.properties
@@ -10,8 +10,8 @@ loader_version=0.14.22
 
 # Mod Properties
 mod_version=1.0.0
-maven_group=example
-archives_base_name=modid
+maven_group=loedje
+archives_base_name=screenshot_organisation
 
 # Dependencies
 fabric_version=0.89.1+1.20.2
