--- a/gradle.properties
+++ b/gradle.properties
@@ -4,14 +4,15 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.20.2
-yarn_mappings=1.20.2+build.1
-loader_version=0.14.22
+minecraft_version=1.20.4
+yarn_mappings=1.20.4+build.3
+loader_version=0.15.6
+
+#Fabric api
+fabric_version=0.95.1+1.20.4
 
 # Mod Properties
-mod_version=1.2
+mod_version=1.3
 maven_group=loedje
 archives_base_name=screenshot_organisation
 
-# Dependencies
-fabric_version=0.89.1+1.20.2
