now should be compatible with shared resources

--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,9 @@ base {
 
 repositories {
 	maven {
+		url "https://maven.enjarai.nl/releases"
+	}
+	maven {
 		url "https://maven.terraformersmc.com/releases"
 	}
 }
@@ -33,6 +36,7 @@ dependencies {
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 	modImplementation 'com.terraformersmc:modmenu:9.0.0'
+	modImplementation "nl.enjarai:shared-resources-api:1.7.0"
 }
 
 processResources {
