--- a/gradle.properties
+++ b/gradle.properties
@@ -4,15 +4,17 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.20.4
-yarn_mappings=1.20.4+build.3
-loader_version=0.15.6
+minecraft_version=1.20.6
+yarn_mappings=1.20.6+build.1
+loader_version=0.15.11
 
 #Fabric api
-fabric_version=0.95.1+1.20.4
+fabric_version=0.97.8+1.20.6
 
 # Mod Properties
-mod_version=1.4
+mod_version=1.5
 maven_group=loedje
 archives_base_name=screenshot_organisation
+
+mod_menu_version=10.0.0-beta.1
 
