--- a/gradle.properties
+++ b/gradle.properties
@@ -4,17 +4,17 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.20.6
-yarn_mappings=1.20.6+build.1
+minecraft_version=1.21
+yarn_mappings=1.21+build.4
 loader_version=0.15.11
 
 #Fabric api
-fabric_version=0.97.8+1.20.6
+fabric_version=0.100.4+1.21
 
 # Mod Properties
-mod_version=1.5
+mod_version=1.6
 maven_group=loedje
 archives_base_name=screenshot_organisation
 
-mod_menu_version=10.0.0-beta.1
+mod_menu_version=11.0.1
 
