--- a/gradle.properties
+++ b/gradle.properties
@@ -4,17 +4,18 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21
-yarn_mappings=1.21+build.4
-loader_version=0.15.11
+minecraft_version=1.21.8
+yarn_mappings=1.21.8+build.1
+loader_version=0.17.2
+loom_version=1.11-SNAPSHOT
 
-#Fabric api
-fabric_version=0.100.4+1.21
+# Fabric API
+fabric_version=0.133.4+1.21.8
 
 # Mod Properties
-mod_version=1.8
+mod_version=1.9
 maven_group=loedje
 archives_base_name=screenshot_organisation
 
-mod_menu_version=11.0.1
+mod_menu_version=15.0.0
 
